--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -8,23 +8,9 @@ body {
 	max-width: 100%;
 }
 
-div {
-	width: 600px;
-	height: 200px;
-	margin: 20px auto;
-	/*background-color:yellow;*/
-}
-	
-
-#logo{
-	display: block; /*for the img inside your div */  
-	margin-left: auto; 
-	margin-right: auto; 
-}
-
 h1 {
-	border:6px #948AA9;
-	border-style: dotted dashed solid double;
+	border:10px #948AA9;
+	/*border-style: dotted dashed solid double;*/
 	width: 600px;
 	margin: 20px auto;
 	text-align: center;
@@ -46,28 +32,34 @@ h3 {
 #overwrite {
 	color: cyan;
 }
-ul {
-	background-color: #948AA9;
-	margin-bottom: 50px;
-	font-size: 20px;
-	width: 100%;
-	height:70px;
-	line-height: 60px;
-	
+ul {	
+	list-style-type: none;
+	margin: 0;
+	padding: 0; 
+	background-color: #42b6f4;
+	line-height: 50px;
+	overflow: hidden; 
 }
 ul li {
-	float: left;
-	list-style-type: none;
-	padding-left: 100px;
+	display: inline;
+	float: none;
 	background-color: solid blue;
 }
 
-ul li a {
+/ul li a {
+	text-align: center;
+	padding: 40px;
 	color:white;
 	text-decoration: none;
 }
 
-ul li a:hover {
+ul li a.active {
+    color: black;
+    font-weight: bold;
+}
+
+ul li a:hover:not(.active) {
 	color:blue;
 	font-weight: bold;
 }
+
