--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -40,7 +40,7 @@ div {
 ul {	
 	list-style-type: none;
 	margin: 0;
-	padding: 100; 
+	padding: 0; 
 	background-color: #42b6f4;
 	line-height: 50px;
 	overflow: hidden; 
@@ -67,5 +67,23 @@ ul li a.active {
 ul li a:hover:not(.active) {
 	color:blue;
 	font-weight: bold;
-} div 
+} div
 
+ #myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
