FINALLY DONE (sorta)
still have a few techincial issues but yeah

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -4,26 +4,21 @@
 	padding:0;
 }
 body {
-	background-color: #e2edff;
+	background-color: #83d4f7;
 	max-width: 100%;
 	max-height: 100%
 }
 
-#indexheader {
-	border:10px #948AA9;
-	/*border-style: dotted dashed solid double;*/
-	width: 600px;
-	margin: 20px auto;
-	text-align: center;
-	padding: 10px;
-	font-family: 'Itim', cursive; 
+#main {
+	border:10px;
+	padding: 15px; 
 }
 
-.remixdescription {
+#maintitle {
 	text-align: center;
-	font-size: 20px;
+	font-family: 'Itim', cursive;
+	font-size: 38px; 
 }
-
 .remiximage {
 	 display: block;
     margin-left: auto;
@@ -42,39 +37,99 @@ body {
 	max-height: 100%;
 }
 
-div {
+.glitchimages {
 	text-align: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
+	height: 60%;
 }
 
-ul {	
-	list-style-type: none;
-	margin: 0;
-	padding: 0; 
-	background-color: #54b7ff;
-	line-height: 50px;
-	overflow: hidden; 
+.processingPortrait {
+	display: block;
+	margin-right: auto; 
+	margin-left: auto;
+}
+
+.conditionalVideo {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	height:400px; 
+	width: 700px;
+}
+
+.netart2button {
 	align-content: center;
-}
-ul li {
-	display: inline;
-	float: none;
-	background-color: solid blue;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-/ul li a {
+.netart4image {
+	align-content: center;
+	padding-right: 10px;	
+}
+
+.statementTitle {
+	text-align: left;
+	font-size: 28px;
+
+}
+
+.vimeoVideo {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	height: 500px;
+	width:800px;
+
+}
+
+.statementDescription {
+	text-align: left;
+	font-size: 25px;
+}
+
+.sketch {
+	margin-right: auto;
+	margin-left: auto;
+}
+
+#footer {
 	text-align: center;
-	padding: 40px;
-	color:white;
-	text-decoration: none;
+	padding: 15px;
+	margin: 10px;
+	font-size: 90%;
+} 
+
+nav {
+	background-color: #ffb356;
+    margin: 0;
+	overflow: hidden;
 }
 
-ul li a.active {
+nav ul {	
+	margin: 0px; 
+	text-align: center;
+	font-size: 20px;
+	list-style-type: none;
+	padding: 5px 0px 5px 0px;
+}
+
+nav ul li {
+	display: inline;
+	padding: 5px 10px 5px 10px;
+	
+}
+
+nav ul li a.active {
     color: black;
+    border-bottom: none;
     font-weight: bold;
 }
 
-ul li a:hover:not(.active) {
-	color:blue;
+nav ul li :hover:not(.active) {
+	color:black;
 	font-weight: bold;
-
-} div
+}
